[package]
name = "tokio-socks5"
version = "0.1.0"
authors = ["Jinhua Luo <home_king@163.com>"]
edition = "2018"

[lib]
name = "tokio_socks5"
path = "src/lib.rs"

[dependencies]
tokio = "0.2.0-alpha.5"
tokio-executor = "0.2.0-alpha.5"
byteorder = "1"
futures-preview = "=0.3.0-alpha.19"

[patch.crates-io]
tokio = { git = 'https://github.com/kingluo/tokio', branch = "patch-split" }
